--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
+    "@reduxjs/toolkit": "^2.11.2",
+    "formik": "^2.4.9",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.11.0"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.11.0",
+    "redux-saga": "^1.4.2",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
